remove filter from poll api, just keep offset and limit
